2002-12-23  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: bumped version to 1.99.90; tagged as GHEX_1_99_90.
	* src/gtkhex.c: use colors from widget styles to ensure text
	visibility when using high-contrast, accessible themes. initial
	patch was kinldy provided by Pasupathi Duraisamy of Wipro. thanx!
	* src/gtkhex.h (struct _GtkHexClass): removed colormap and cursor
	color members.

2002-11-24  Jaka Mocnik  <jaka@gnu.org>

	* src/hex-document.c, src/ui.c: applied patch from Hideoshi
	Tajima to convert all filenames to utf8 before being used in
	strings for GTK+ to display.

2002-11-10  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c (ghex_window_add_doc_to_list): encode strings
	in XML.
	* ghex.spec.in: applied patch from Dan Hensley.
	* src/chartable.c: enable insertion with keyboard.
	
2002-11-09  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-ui.xml: 'About...' -> 'About'. really fixes #96771.

2002-10-26  Jaka Mocnik  <jaka@gnu.org>

	* configure.in: version 1.99.2. tagged as GHEX_1_99_2.

2002-10-26  Jaka Mocnik  <jaka@gnu.org>

	* src/ghex-window.c (ghex_window_ok_to_close): new function that
	replaces hex_document_ok_to_close() as this is really a window and
	not document issue.
	(ghex_window_save_as): new function that handles saving to a new
	file instead of having this code duplicated all over.
	* src/ui.c (export_html_cb): check for permissions. notify user if
	the selected path is now writable.
	(save_cb): check for write permissions of the file and notify user
	if the file is not writable.
	(save_as_cb): use ghex_window_save_as().
	(close_cb): hex_document_ok_to_close() -> ghex_window_ok_to_close().
	(save_cb, open_cb, export_html_cb): new, cleaner handling of
	file selection.
	* src/ghex-window.c (ghex_window_set_sensitivity): handle
	cut/copy/paste items. also disable find/replace/goto items when
	no document is loaded.
	* src/ui.c (save_cb): test if the document is writable, report an
	error if it is not so!