@@ -7,3 +7,4 @@ Terminal=false
 Type=Application
 Icon=gnome-ghex.png
 Categories=GNOME;Application;Utility;
+StartupNotify=true
