@@ -1,7 +1,7 @@
 /* -*- Mode: C; tab-width: 4; indent-tabs-mode: t; c-basic-offset: 4 -*- */
 /* gtkhex.h - definition of a GtkHex widget, modified for use with GnomeMDI
 
-   Copyright (C) 1997 - 2002 Free Software Foundation
+   Copyright (C) 1997 - 2003 Free Software Foundation
 
    GHex is free software; you can redistribute it and/or
    modify it under the terms of the GNU General Public License as
